syntax = "proto3";
package userservice;

service UserService {
    // Create a user
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc UserExists (UserExistsRequest) returns (UserExistsResponse);
}

message CreateUserRequest {
    string id = 1;
    string username = 2;
    string email = 3;
}

message CreateUserResponse {
    bool success = 1;
}

message UserExistsRequest {
    string user_id = 1;
}

message UserExistsResponse {
    bool exists = 1;
}
